// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Title /> should match snapshot 1`] = `
.emotion-0 {
  color: black;
  font-size: 1.3rem;
  font-weight: 600;
  margin: 1.5rem 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <h1
    class="emotion-0 emotion-1"
  />
</div>
`;

exports[`[Contrib] elements/<Title /> should match snapshot with \`isFirst\` prop 1`] = `
.emotion-0 {
  color: black;
  font-size: 1.3rem;
  font-weight: 600;
  margin: 0 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <h1
    class="emotion-0 emotion-1"
  />
</div>
`;
